[package]
name = "matomo"
version = "0.2.7"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
wit-bindgen = "0.42.1"
urlencoding = "2.1"
url = "2.5.4"
hex = "0.4.3"
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
uuid = { version = "1.10.0", features = ["v4"] }
